[package]
name = "wasmtimewrapper"
version = "0.2.0"
edition = "2021"

[lib]
name = "wasmtimewrapper"
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
async-trait = "0.1"
cap-std = "2.0.0"
rustix = "0.37.19"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.66"
wasmtime = { version = "14.0.1", default-features = false, features = ["parallel-compilation", "cranelift", "pooling-allocator"] }
wasmtime-wasi = "14.0.1"
wasi-common = "14.0.1"
