[package]
name = "wasmtimewrapper"
version = "0.2.0"
edition = "2021"

[lib]
name = "wasmtimewrapper"
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.66"
wasmtime = { version = "36.0.2", default-features = false, features = ["cache", "parallel-compilation", "cranelift", "pooling-allocator", "memory-protection-keys"] }
wasmtime-wasi = "36.0.2"
