[package]
name = "tuleap-wasmtime-wrapper"
version = "0.2.0"
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
name = "wasmtimewrapper"
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
wasmtime = { version = "42.0.0", default-features = false, features = ["cache", "parallel-compilation", "cranelift", "pooling-allocator", "memory-protection-keys"] }
wasmtime-wasi = "42.0.0"
