[package]
name = "test-wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "running-time"
path = "src/running-time/main.rs"

[[bin]]
name = "memory-alloc-fail"
path = "src/memory-alloc-fail/main.rs"

[[bin]]
name = "memory-alloc-success"
path = "src/memory-alloc-success/main.rs"

[[bin]]
name = "happy-path"
path = "src/happy-path/main.rs"

[[bin]]
name = "read-from-preopened-dir"
path = "src/read-from-preopened-dir/main.rs"

[[bin]]
name = "write-to-preopened-dir"
path = "src/write-to-preopened-dir/main.rs"